# 42Python_Modules

./: README.md
Module00/ex00/: ft_hello_garden.py
Module00/ex01/: ft_plot_area.py
Module00/ex02/: ft_harvest_total.py
Module00/ex03/: ft_plant_age.py
Module00/ex04/: ft_water_reminder.py
Module00/ex05/: ft_count_harvest_recursive.py
Module00/ex06/: ft_garden_summary.py
Module00/ex07/: ft_seed_inventory.py
Module01/ex00/: ft_garden_intro.py
Module01/ex01/: ft_garden_data.py
Module01/ex02/: ft_plant_growth.py
Module01/ex03/: ft_plant_factory.py
Module01/ex04/: ft_garden_security.py
Module01/ex05/: ft_plant_types.py
Module01/ex06/: ft_garden_analytics.py
Module02/: ft_first_exception.py
Module02/ex0/: ft_first_exception.py
Module02/ex04/: ft_raise_errors.py
Module02/ex1/: ft_different_errors.py
Module02/ex2/: ft_custom_errors.py
Module02/ex3/: ft_finally_block.py
Module02/ex4/: ft_raise_errors.py
Module02/ex5/: ft_garden_management.py
Module03/ex0/: ft_command_quest.py
Module03/ex00/: ft_command_quest.py
Module03/ex03/: ft_achievement_tracker.py
Module03/ex04/: ft_inventory_system.py  test.py
Module03/ex1/: ft_score_analytics.py
Module03/ex2/: ft_coordinate_system.py
Module03/ex3/: ft_achievement_tracker.py
Module06/: ft_alembic_4.py  ft_circular_curse.py  ft_import_transmutation.py  ft_kaboom_1.py  ft_pathway_debate.py  ft_sacred_scroll.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
Module07/: battle.py  capacitor.py  tournament.py
Module08/ex1/: loading.py  pyproject.toml
(+38 files in other folders)
